--- a/GungeonAPI.csproj
+++ b/GungeonAPI.csproj
@@ -117,5 +117,11 @@
     <EmbeddedResource Include="resource\rooms\Tiny.room" />
     <EmbeddedResource Include="resource\rooms\Yes.room" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="resource\rooms\EmptyRoom.room" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="resource\rooms\ShrineRoom.room" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
