--- a/packages.config
+++ b/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="BepInEx.BaseLib" version="5.4.21" targetFramework="net35" />
   <package id="BepInEx.Core" version="5.4.21" targetFramework="net35" />
+  <package id="EtG.Alexandria" version="0.2.25" targetFramework="net35" />
   <package id="EtG.GameLibs" version="2.1.9.1" targetFramework="net35" />
   <package id="EtG.ModTheGungeonAPI" version="1.6.1" targetFramework="net35" />
   <package id="EtG.UnityEngine" version="1.0.0" targetFramework="net35" />
